force-app/main/default/objects/DeliiveryLine__c/DeliiveryLine__c.object-meta.xml
<CustomObject>
    <label>DeliveryLine</label>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>DeliiveryLines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeliveryLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>