force-app/main/default/objects/DeliiveryLine__c/fields/DeliveredAmount__c.field-meta.xml
<CustomField>
    <fullName>DeliveredAmount__c</fullName>
    <label>DeliveredAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>