force-app/main/default/objects/DeliiveryLine__c/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <label>DeliveryStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>