force-app/main/default/objects/DeliiveryLine__c/fields/OrderAccount__c.field-meta.xml
<CustomField>
    <fullName>OrderAccount__c</fullName>
    <formula>OrderLine__r.OrderDeliveryAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderAccount</label>
    <type>Text</type>
</CustomField>