force-app/main/default/objects/DeliiveryLine__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <formula>OrderLine__r.OrderId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderId</label>
    <type>Text</type>
</CustomField>