force-app/main/default/objects/DeliiveryLine__c/fields/OrderLine__c.field-meta.xml
<CustomField>
    <fullName>OrderLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>DeliiveryLines</relationshipName>
    <type>Lookup</type>
</CustomField>