force-app/main/default/objects/DeliiveryLine__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <formula>OrderLine__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>